src/tests/testfiles/const/8.txt
testfiles/const/8.c:8:8: error: initializing 'int * *' with an expression of type 'int * const *' discards 'const' qualifier
int** b = a;
   ^
testfiles/const/8.c:9:5: error: passing argument 1 of 'f' discards 'const' qualifier, expected 'int * *' but got 'int * const *' 
f(a);
^
testfiles/const/8.c:12:7: error: parameter 1 of 'f' expected 'int * *' but got 'int * const * const * const'
f(c);
  ^
testfiles/const/8.c:13:5: error: passing argument 1 of 'f' discards 'const' qualifier, expected 'int * *' but got 'int * const * const' 
f(*c);
^
